--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"start": "parcel ./src/index.html --port 8080 --open"
 	},
 	"dependencies": {
+		"bootstrap": "^4.5.3",
 		"vue": "^2.6.12",
 		"vue-hot-reload-api": "^2.3.4"
 	},
